--- a/styles/style.css
+++ b/styles/style.css
@@ -1,70 +1,139 @@
 @import "fonts.css";
 
-:root{
-    --background_color_one: #ffffff;
-    --background_color_two: #f2f4f6;
-    --primary: #38A4DC;
-    --border_color: #D6D7D8;
-    --text_color_one: #5C6163;
-
-
+:root {
+  --background_color_one: #ffffff;
+  --background_color_two: #f2f2f2;
+  --primary: #ff7062;
+  --border_color: #d6d7d8;
+  --text_color_one: #5c6163;
+  --text_color_two: #24282a;
+  --text_color_three: #939fa4;
 }
 
-
-html, body{
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
-body{
-    margin: 0;
-    background-color: var(--background_color_two);
-    font-family: 'roboto','Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+body {
+  margin: 0;
+  background-color: var(--background_color_two);
+  font-family: "roboto", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.wrapper  {
-
-    width: 100%;
-    max-width: 90rem;
-    margin: 0 auto;
-    background-color: var(--background_color_one);
-    min-height: 10rem;
-    border-left: 1px solid var(--border_color);
-    border-right: 1px solid var(--border_color);
-    box-sizing: border-box;
+.wrapper {
+  width: 100%;
+  max-width: 90rem;
+  margin: 0 auto;
+  background-color: var(--background_color_one);
+  min-height: 10rem;
+  border-left: 1px solid var(--border_color);
+  border-right: 1px solid var(--border_color);
+  box-sizing: border-box;
 }
 .inner {
-    width: 100%;
-    max-width: 73.125rem;
-    margin: 0 auto;
-    height: inherit;
-
+  width: 100%;
+  max-width: 73.125rem;
+  margin: 0 auto;
+  height: inherit;
 }
-.top_header {
-
-        background-color: var(--background_color_two);
-        min-height: 3.125rem;
+.top-header {
+  background-color: var(--background_color_two);
+  min-height: 3.125rem;
 }
 
 .popular_destinations {
-    display: flex;
-    justify-content: flex-end;
-    font-size: 0.75rem;
-    line-height: 3.125rem;
-
+  display: flex;
+  justify-content: flex-end;
+  font-size: 0.75rem;
+  line-height: 3.125rem;
 }
 
 .popular_destinations a {
-    font-weight: 500;
-    margin-left: 1.875rem;
-
+  font-weight: 500;
+  margin-left: 1.875rem;
 }
-
 
 .popular_destinations div {
-
-    color: var(--text_color_one);
+  color: var(--text_color_one);
 }
 a {
-    text-decoration: none;
-    color: var(--primary);
+  text-decoration: none;
+  color: var(--primary);
+}
+
+.header {
+  height: 6.25rem;
+  background-color: var(--background_color_one);
+}
+.header_inner {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo {
+  font-size: 1.75rem;
+  font-weight: 300;
+  color: var(--text_color_three);
+}
+
+.logo span {
+  font-weight: 700;
+  color: var(--text_color_two);
+}
+.page_menu a {
+  color: var(--text_color_one);
+  font-weight: 500;
+  font-size: 0.875rem;
+  padding: 0.625rem;
+  margin: 0.9375rem;
+}
+.page_menu a.active, .page_menu a:hover{
+    background: var(--primary);
+    color: var(--background_color_one);
+    box-shadow: 0px 15px 40px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+} 
+.phone {
+   font-size: 0.87rem;
+   font-weight: 500;
+   color: var(--primary);
+   display: flex;
+   align-content: center; 
+}
+
+.phone span {
+    margin-left: 0.5rem;
+}
+
+.hero_header{
+  height: 43.75rem;
+  background-image: url("/assets/img/heroimage.webp");
+  background-size: cover;
+  text-align: center;
+}
+
+.hero_header_inner{
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
 }
+
+.sub_head_line {
+  color: var(--background_color_one);
+  font-size: 1.25rem;
+  margin-bottom: 3.75rem;
+}
+a.button{
+  color: var(--background_color_one);
+  font-weight: 500;
+  padding: 0 2.5rem;
+  line-height: 3.75rem;
+
+  background: linear-gradient(199.55deg, #FDD6BD 0%, #F794A4 100%);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.5);
+  border-radius: 30px;
+  display: inline-block;
+}
+
+
