--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,7 @@ a {
 
 .hero_header {
   height: 43.75rem;
-  background-image: url("assets/img/heroimage.webp");
+  background-image: url("../assets/img/heroimage.webp");
   background-size: cover;
   text-align: center;
 }
